# GeoQuery

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  luciad_and_leuven.kml
.github/workflows/: production.yml
Software Process Assets/: thales_sh35_wireframe_01.drawio.html
back-end/: Cargo.toml
back-end/src/: main.rs
backend/: Cargo.toml  config.json  config.txt  config.txt.example
backend/src/: config.rs  error.rs  index.rs  io.rs  main.rs  routes.rs  spatial.rs  worker.rs
backend/src/geotiff/: Cargo.toml
backend/src/geotiff/src/: lib.rs
backend/src/parsing/: conversions.rs  dt2.rs  dted.rs  error.rs  geojson.rs  gpkg.rs  kml.rs  mbtiles.rs  mod.rs  shapefile.rs
backend/src/parsing/geotiff/: Cargo.toml
backend/src/parsing/geotiff/src/: entry.rs  error.rs  geokeydirectory.rs  header.rs  lib.rs  tfw.rs  util.rs
data-parsing-archive/: Cargo.toml
data-parsing-archive/src/: kml.rs  spatial.rs
documentation/: backend_documentation.md  frontend_documentation.md  index.md  tags.md  web-api_documentation.md
frontend/: folder_template_example.json  package-lock.json  package.json  tailwind.config.js
frontend/electron-refactor/: forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  webpack.main.config.ts
frontend/public/: index.html
frontend/src/: App.js  DMDM-DD.js  DMS-DD.js  config.js  k.css  main.ts  preload.ts
sh35-front/: package-lock.json  package.json
sh35-front/src/: App.js
src/: __init__.py  data.rs  dt2.rs  geojson.rs  index.rs  kml.rs  main.py  main.rs  parsing.rs  region.rs  spatial.rs  tiff.rs  util.rs
to_delete/: TestExportProcess.tsx  TestFileCopy.tsx  test_template_structure_002.json
web-api/: requirements.txt  run_server.py
(+107 files in other folders)
