[package]
name = "sh35-backend"
version = "0.0.2"
edition = "2021"

[workspace]
members = [
    "src/parsing/geotiff",
]

[dependencies]
anyhow = "1.0.75"
rstar = { version="0.11.0" , features = ["serde"]}
xml-rs = "0.8.19"
json-event-parser = "0.1.1"
geotiff = { path= "src/parsing/geotiff" }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
axum = { version="0.7.1", features = ["macros"]}
serde = { version = "1.0.193", features = ["derive", "rc"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
futures = "0.3.30"
tower = "0.4.13"
http = "1.0.0"
tower-http = { version = "0.5.0", features = [ "cors" ] }
serde_json = "1.0.111"
rayon = {version = "1.8.0"}
tracing-subscriber = { version="0.3.18", features = ["fmt", "std"] }
tracing = "0.1.40"
