[package]
name = "geotiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proj4rs = "0.1.2"
proj4wkt = "0.1.0"
crs-definitions = "0.3.0"
tempfile = "3.9.0"
byteorder = "1.4.3"
serde = { version = "1.0.193", features = ["derive", "rc"] }
